Add a bug report link

--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
                     </tbody>
                 </table>
             </div>
+            <footer class="d-inline-block">
+                <a
+                    class="text-decoration-none"
+                    href="https://github.com/dsinn/dead-rising-2-recipe-finder/issues/new"
+                    target="_blank"
+                >
+                    Report a bug
+                </a>
+            </footer>
         </div>
         <script src="index.js"></script>
     </body>
