Better to link to the issue index
There exist things like duplicates/wontfix/etc.

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
             <footer class="d-inline-block">
                 <a
                     class="text-decoration-none"
-                    href="https://github.com/dsinn/dead-rising-2-recipe-finder/issues/new"
+                    href="https://github.com/dsinn/dead-rising-2-recipe-finder/issues?q=is%3Aissue"
                     target="_blank"
                 >
-                    Report a bug
+                    Bug tracker
                 </a>
             </footer>
         </div>
